--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body class="gp-entrada">
 
-  <!-- HEADER BLANCO COMO JUGADORES -->
+  <!-- HEADER -->
   <header class="gp-entrada-header">
     <a href="index.html" aria-label="Inicio GPADEL">
       <img
