preentrega 3 - estructura final, sass y responsive

--- a/pages/ayuda-jugadores.html
+++ b/pages/ayuda-jugadores.html
@@ -102,7 +102,7 @@
 
       <!-- Imagen-->
       <div class="col-12 col-lg-5 gp-dashboard-image">
-        <img src="../img/jugador.png" alt="Perfil de jugador GPADEL" loading="lazy">
+        <img src="../img/jugador.png" alt="Perfil deportivo del jugador GPADEL" loading="lazy">
       </div>
 
       <!-- Contenido -->
