Cambios en title y meta description en paginas

--- a/pages/canchas-ligas.html
+++ b/pages/canchas-ligas.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>GPADEL – Sitio en construcción</title>
+  <title>GPADEL | Gestión de canchas y ligas de pádel</title>
+
+  <meta name="description" content="GPADEL es una plataforma para la gestión de canchas y ligas de pádel. Administrá turnos, torneos, jugadores y partidos desde un solo dashboard."/>
 
   <!-- Tipografía -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
