--- a/pages/jugadores.html
+++ b/pages/jugadores.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>GPADEL - Plataforma de Gestión de Pádel</title>
+  <title>Jugadores de pádel | Reservas y marcador en GPADEL</title>
+
+  <meta name="description" content="GPADEL es una plataforma para jugadores de pádel donde podés reservar canchas, organizar partidos y llevar el score en vivo desde un solo lugar."/>
 
   <!-- Tipografía -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
