--- a/pages/login.html
+++ b/pages/login.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>GPADEL - Plataforma de Gestión de Pádel</title>
+  <title>Iniciar sesión | GPADEL</title>
+
+  <meta name="description" content="Accedé a tu cuenta de GPADEL para gestionar tus reservas, partidos, torneos y marcador de pádel."/>
 
   <!-- Tipografía -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
