--- a/pages/partidos-vivo.html
+++ b/pages/partidos-vivo.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>GPADEL – Sitio en construcción</title>
+  <title>Partidos de pádel en vivo | Marcador y partido en tiempo real GPADEL</title>
+
+  <meta name="description" content="SeguÍ partidos de pádel en vivo con el marcador en tiempo real de GPADEL. Resultados, sets y evolución del partido en una sola pantalla."/>
 
   <!-- Tipografía -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
