--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>GPADEL – Elegí tu perfil</title>
+  <title>GPADEL | Gestión de ligas, jugadores y canchas de pádel</title>
+  <meta name="description" content="GPADEL es una plataforma web para gestionar jugadores, ligas, torneos, canchas y marcadores de pádel. Inscripciones, partidos y seguimiento en un solo lugar."/>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   
