--- a/pages/ayuda-jugadores.html
+++ b/pages/ayuda-jugadores.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cómo funciona - Jugadores | GPADEL</title>
+  <title>Cómo funciona GPADEL | Gestión y marcador de pádel para jugadores</title>
+  <meta name="description" content="Descubrí cómo funciona GPADEL para jugadores de pádel. Gestioná tu perfil, llevá el marcador de partidos, seguí tu progreso y participá en torneos."/>
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
