--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contacto - GPADEL</title>
+  <title>Contacto GPADEL | Plataforma de gestión de pádel</title>
+
+  <meta name="description" content="Contactá a GPADEL para consultas sobre gestión de pádel, ligas, canchas y jugadores. Estamos para ayudarte a organizar partidos y torneos."/>
 
   <!-- Boostrap -->    
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
