--- a/pages/inscripcion-torneos.html
+++ b/pages/inscripcion-torneos.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Torneos - GPADEL</title>
+  <title>Torneos de pádel | Calendario e inscripción en GPADEL</title>
+
+  <meta name="description" content="Encontrá torneos de pádel por año, mes y ciudad. Mirá detalles e inscribite a competencias desde el calendario de torneos de GPADEL."/>
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
