--- a/pages/reservar-cancha.html
+++ b/pages/reservar-cancha.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Reservar Cancha - GPADEL - Reservar Canchas</title>
+  <title>Reservar cancha de pádel online | GPADEL</title>
+
+  <meta name="description" content="Reservá tu cancha de pádel online con GPADEL. Buscá por ciudad, fecha y horario y encontrá canchas disponibles en segundos."/>
 
   <!-- Boostrap -->    
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
