--- a/pages/score-type.html
+++ b/pages/score-type.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Score - GPADEL</title>
+  <title>Marcador de pádel en vivo | Configurar partido – GPADEL</title>
+
+  <meta name="description" content="Elegí la modalidad del partido y comenzá a usar el marcador de pádel en vivo con GPADEL."/>
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
