--- a/pages/score.html
+++ b/pages/score.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Score - GPADEL</title>
+  <title>Marcador de pádel en vivo | Crear y compartir score – GPADEL</title>
+
+  <meta name="description" content="Creá tu marcador de pádel en vivo con GPADEL. Llevá el score del partido y compartilo con tu equipo o con quien quieras en tiempo real."/>
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
