Ajustes en css responsive para inscripcion de torneos

--- a/pages/inscripcion-torneos.html
+++ b/pages/inscripcion-torneos.html
@@ -156,7 +156,7 @@
         <!-- Grid -->
         <div class="gp-torneo-grid" id="tournamentsGrid">
 
-          <!-- Card (ejemplo) -->
+          <!-- Card (de un torneo ejemplo) -->
           <article class="gp-torneo-card"
             data-year="2026" data-month="03" data-city="tandil">
             <div class="gp-torneo-top">
