--- a/pages/jugadores.html
+++ b/pages/jugadores.html
@@ -246,52 +246,52 @@
 
       <!-- 1 -->
       <a class="gp-sponsor" href="https://worldpadelcenter.com.ar/" target="_blank" rel="noopener">
-        <img src="../img/auspiciantes/1.png" alt="World Padel Center">
+        <img src="../img/auspiciantes/1.avif" alt="World Padel Center">
       </a>
 
       <!-- 2 -->
       <a class="gp-sponsor" href="https://ultimatepadel.com.ar/" target="_blank" rel="noopener">
-        <img src="../img/auspiciantes/2.png" alt="Ultimate Padel">
+        <img src="../img/auspiciantes/2.avif" alt="Ultimate Padel">
       </a>
 
       <!-- 3 -->
       <a class="gp-sponsor" href="https://www.instagram.com/padel_boxx/?hl=es" target="_blank" rel="noopener">
-        <img src="../img/auspiciantes/3.png" alt="Padel Boxx">
+        <img src="../img/auspiciantes/3.avif" alt="Padel Boxx">
       </a>
 
       <!-- 4 -->
       <a class="gp-sponsor" href="https://www.instagram.com/angastacopadel/" target="_blank" rel="noopener">
-        <img src="../img/auspiciantes/4.png" alt="Angastaco Padel">
+        <img src="../img/auspiciantes/4.avif" alt="Angastaco Padel">
       </a>
 
       <!-- 5 -->
       <a class="gp-sponsor" href="https://www.instagram.com/piedra_libre_padel/?hl=es" target="_blank" rel="noopener">
-        <img src="../img/auspiciantes/5.png" alt="Piedra Libre Padel">
+        <img src="../img/auspiciantes/5.avif" alt="Piedra Libre Padel">
       </a>
 
       <!-- 6 -->
       <a class="gp-sponsor" href="https://www.instagram.com/nucleopadel_/?hl=es" target="_blank" rel="noopener">
-        <img src="../img/auspiciantes/6.png" alt="Núcleo Padel">
+        <img src="../img/auspiciantes/6.avif" alt="Núcleo Padel">
       </a>
 
       <!-- 7 -->
       <a class="gp-sponsor" href="https://www.instagram.com/nexussport.tandil/?hl=es" target="_blank" rel="noopener">
-        <img src="../img/auspiciantes/7.png" alt="Nexus Sport Tandil">
+        <img src="../img/auspiciantes/7.avif" alt="Nexus Sport Tandil">
       </a>
 
       <!-- 8 -->
       <a class="gp-sponsor" href="https://www.instagram.com/picodeportestandil/?hl=es" target="_blank" rel="noopener">
-        <img src="../img/auspiciantes/8.png" alt="Pico Deportes Tandil">
+        <img src="../img/auspiciantes/8.avif" alt="Pico Deportes Tandil">
       </a>
 
       <!-- 9 -->
       <a class="gp-sponsor" href="https://www.instagram.com/barlay.padel/?hl=es" target="_blank" rel="noopener">
-        <img src="../img/auspiciantes/9.png" alt="Barlay Padel">
+        <img src="../img/auspiciantes/9.avif" alt="Barlay Padel">
       </a>
 
       <!-- 10 -->
       <a class="gp-sponsor" href="https://www.instagram.com/padel.company/?hl=es" target="_blank" rel="noopener">
-        <img src="../img/auspiciantes/10.png" alt="Padel Company">
+        <img src="../img/auspiciantes/10.avif" alt="Padel Company">
       </a>
 
 
