Cambio el bg de Hero por imagen de fondo real para mejorar el LCP

--- a/pages/ayuda-jugadores.html
+++ b/pages/ayuda-jugadores.html
@@ -85,15 +85,27 @@
 
     <!-- HERO -->
     <section class="gp-pages-hero">
+
+      <!-- Imagen de fondo REAL (mejora LCP) -->
+      <img class="gp-hero-bg" src="../img/bggpadel.webp"  alt="" fetchpriority="high" decoding="async">
+
       <div class="gp-container">
         <h1>¿Cómo funciona?</h1>
-        <p>100% gratuito para jugadores. Reservá canchas, llevá el score y mirá tu progreso en tu perfil.</p>
+        <p>
+          100% gratuito para jugadores.
+          Reservá canchas, llevá el score y mirá tu progreso en tu perfil.
+        </p>
+
+        <div class="gp-hero-cta">
+          <a href="reservar-cancha.html" class="gp-btn gp-btn--primary">
+            Buscar canchas
+          </a>
+          <a href="score.html" class="gp-btn gp-btn--secondary">
+            Usar el marcador
+          </a>
+        </div>
       </div>
 
-      <div class="gp-hero-cta">
-        <a href="reservar-cancha.html" class="gp-btn gp-btn--primary">Buscar canchas</a>
-        <a href="score.html" class="gp-btn gp-btn--secondary">Usar el marcador</a>
-      </div>
     </section>
 
 <!-- PERFIL DASHBOARD -->
