--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -83,12 +83,17 @@
         </nav>
   </header>
 
-  <!-- HERO CONTACTO (similar a Geneos, texto + bajada) Arme un hero generico para paginas-->
-  <section class="gp-pages-hero">
-    <div class="gp-container">
-      <h1>Contacto</h1>
-    </div>
-  </section>
+<!-- HERO CONTACTO (hero genérico para páginas) -->
+<section class="gp-pages-hero">
+
+  <!-- Cambie el fondo real para mejorar LCP  -->
+  <img class="gp-hero-bg" src="../img/bggpadel.webp" alt="" decoding="async">
+
+  <div class="gp-container">
+    <h1>Contacto</h1>
+  </div>
+
+</section>
 
   <!-- BLOQUE PRINCIPAL: info + formulario -->
   <section class="gp-contact-main">
