--- a/pages/inscripcion-torneos.html
+++ b/pages/inscripcion-torneos.html
@@ -76,13 +76,16 @@
   <main class="gp-main">
 
     <!-- HERO -->
-    <section class="gp-pages-hero">
-      <div class="gp-container">
-        <h5>CALENDARIO</h5>
-        <h1>Torneos</h1>
-        <p>Filtrá por año, mes y ciudad para encontrar el torneo ideal.</p>
-      </div>
-    </section>
+  <section class="gp-pages-hero">
+    <img class="gp-hero-bg" src="../img/bggpadel.webp" alt="" decoding="async">
+
+    <div class="gp-container">
+      <h5>CALENDARIO</h5>
+      <h1>Torneos</h1>
+      <p>Filtrá por año, mes y ciudad para encontrar el torneo ideal.</p>
+    </div>
+
+  </section>
 
     <!-- CONTENIDO TORNEOS -->
     <section class="gp-torneos">
