--- a/pages/login.html
+++ b/pages/login.html
@@ -88,8 +88,10 @@
         </nav>
   </header>
 
-  <!-- HERO-->
+<!-- HERO LOGIN -->
   <section class="gp-pages-hero gp-login-hero">
+    <img class="gp-hero-bg" src="../img/bggpadel.webp" alt="" decoding="async">
+
     <div class="gp-container">
       <h5>ACCESO A LA PLATAFORMA</h5>
       <h1>Inicie Sesión</h1>
