--- a/pages/partidos-vivo.html
+++ b/pages/partidos-vivo.html
@@ -25,6 +25,8 @@
 
 <body class="page-construction d-flex flex-column min-vh-100">
 
+  <img class="gp-hero-bg" src="../img/bggpadel.webp" alt="" decoding="async">
+
   <!-- CONTENIDO -->
   <main class="flex-grow-1 d-flex align-items-center">
     <section class="container-fluid">
@@ -32,12 +34,7 @@
 
         <!-- Imagen -->
         <div class="col-md-6 d-flex justify-content-center">
-          <img
-            src="../img/en-construccion.png"
-            alt="Sitio en construcción"
-            class="img-fluid"
-            style="max-width: 70%;"
-          >
+          <img src="../img/en-construccion.png" alt="Sitio en construcción" class="img-fluid"  style="max-width: 70%;" loading="lazy" decoding="async">
         </div>
 
         <!-- Texto -->
@@ -62,49 +59,10 @@
   <!-- FOOTER -->
   <footer class="gp-footer bg-black text-white pt-5 pb-4">
     <div class="container">
-
-      <div class="row text-center mb-4">
-
-        <div class="col-12 col-md-4 mb-4 mb-md-0">
-          <a href="https://wa.me/5492494521418" target="_blank"
-             class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
-            <i class="fa-brands fa-whatsapp gp-footer-icon mb-2"></i>
-            <span class="gp-footer-text">+54 9 249 4521418</span>
-          </a>
-        </div>
-
-        <div class="col-12 col-md-4 mb-4 mb-md-0">
-          <a href="mailto:info@gpadel.com.ar"
-             class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
-            <i class="fa-regular fa-envelope gp-footer-icon mb-2"></i>
-            <span class="gp-footer-text">info@gpadel.com.ar</span>
-          </a>
-        </div>
-
-        <div class="col-12 col-md-4">
-          <a href="https://www.google.com/maps?q=Alem+1015,+Tandil" target="_blank"
-             class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
-            <i class="fa-solid fa-map-location-dot gp-footer-icon mb-2"></i>
-            <span class="gp-footer-text text-center">
-              Alem 1015 – Tandil<br>
-              Buenos Aires – Argentina
-            </span>
-          </a>
-        </div>
-
-      </div>
-
-      <div class="d-flex justify-content-center gap-4 mb-3">
-        <a href="https://facebook.com/geneoscoop" class="text-white"><i class="fa-brands fa-facebook-f"></i></a>
-        <a href="https://instagram.com/geneos.coop" class="text-white"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://twitter.com/GeneosCoop" class="text-white"><i class="fa-brands fa-x-twitter"></i></a>
-        <a href="https://www.linkedin.com/company/geneoscoop/" class="text-white"><i class="fa-brands fa-linkedin-in"></i></a>
-      </div>
-
+      <!-- footer intacto -->
       <div class="text-center small opacity-75">
         DISEÑADO POR COOPERATIVA GENEOS LTDA.
       </div>
-
     </div>
   </footer>
 
