--- a/pages/reservar-cancha.html
+++ b/pages/reservar-cancha.html
@@ -83,8 +83,9 @@
         </nav>
   </header>
 
-  <!-- HERO CONTACTO (similar a Geneos, texto + bajada) Arme un hero generico para paginas-->
+  <!-- HERO RESERVAR CANCHA -->
   <section class="gp-pages-hero">
+    <img class="gp-hero-bg" src="../img/bggpadel.webp" alt="" decoding="async">
     <div class="gp-container">
       <h1>Reservar Cancha</h1>
     </div>
