--- a/pages/score-type.html
+++ b/pages/score-type.html
@@ -83,8 +83,9 @@
 <!-- HERO-->
   <main class="gp-main">
     <section class="gp-pages-hero">
+      <img class="gp-hero-bg" src="../img/bggpadel.webp" alt="" decoding="async">
       <div class="gp-container">
-        <h1>Marcador de padel en vivo</h1>
+        <h1>Marcador de pádel en vivo</h1>
         <h5>Elegí la modalidad del partido</h5>
         <p><strong>Código:</strong> 5EHEJK</p>
 
@@ -101,10 +102,14 @@
             </label>
 
             <p class="gp-modalidad-info">
-              El super tie-break se juega cuando ambos equipos ganan un set (1–1), a 10 puntos y con diferencia mínima de 2.
+              El super tie-break se juega cuando ambos equipos ganan un set (1–1),
+              a 10 puntos y con diferencia mínima de 2.
             </p>
 
-            <button class="gp-btn gp-btn--primary">Ir al marcador</button>
+            <button class="gp-btn gp-btn--primary">
+              Ir al marcador
+            </button>
+
           </div>
         </div>
       </div>
