--- a/pages/score.html
+++ b/pages/score.html
@@ -84,21 +84,20 @@
   <!-- MAIN -->
   <main class="gp-main">
 
-    <!-- HERO -->
-    <section class="gp-pages-hero">
-      <div class="gp-container">
-        <h1>Marcador de pádel en vivo</h1>
-        <p>
-          Creá tu partido, llevá el score y compartilo con tu equipo o con el mundo.
-        </p>
-      </div>
-
+  <!-- HERO -->
+  <section class="gp-pages-hero">
+    <img class="gp-hero-bg" src="../img/bggpadel.webp" alt="" decoding="async">
+    <div class="gp-container">
+      <h1>Marcador de pádel en vivo</h1>
+      <p>
+        Creá tu partido, llevá el score y compartilo con tu equipo o con el mundo.
+      </p>
       <div class="gp-hero-cta">
         <a href="score-type.html" class="gp-btn gp-btn--primary">Crear marcador</a>
         <a href="partidos-vivo.html" class="gp-btn gp-btn--secondary">Partidos en vivo</a>
       </div>
-    </section>
-
+    </div>
+  </section>
   </main>
 
   <!-- FOOTER -->
