--- a/pages/torneo-detalle.html
+++ b/pages/torneo-detalle.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>GPADEL | Gestión de canchas y ligas de pádel</title>
+  <title>Detalle del torneo | GPADEL – Torneos de pádel</title>
 
-  <meta name="description" content="GPADEL es una plataforma para la gestión de canchas y ligas de pádel. Administrá turnos, torneos, jugadores y partidos desde un solo dashboard."/>
+  <meta name="description" content="Consultá el detalle del torneo de pádel en GPADEL: fechas, sede, categorías, modalidad de juego e inscripciones. Página en construcción."/>
 
   <!-- Tipografía -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
