Ajuste en iconos aria-hidden true

--- a/pages/ayuda-jugadores.html
+++ b/pages/ayuda-jugadores.html
@@ -134,7 +134,7 @@
             <div class="p-4 rounded-4 bg-white shadow-sm">
               <div class="d-flex align-items-start gap-3">
                 <div class="gp-benefit-icon">
-                  <i class="fa-solid fa-chart-line"></i>
+                  <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
                 </div>
                 <div>
                   <h3 class="h5 mb-2 gp-benefit-title">Estadísticas y evolución</h3>
@@ -151,7 +151,7 @@
             <div class="p-4 rounded-4 bg-white shadow-sm">
               <div class="d-flex align-items-start gap-3">
                 <div class="gp-benefit-icon">
-                  <i class="fa-regular fa-calendar-check"></i>
+                  <i class="fa-regular fa-calendar-check" aria-hidden="true"></i>
                 </div>
                 <div>
                   <h3 class="h5 mb-2 gp-benefit-title">Historial completo y control</h3>
