Agregue width y height al logo para mejorar en Lighthouse

--- a/index.html
+++ b/index.html
@@ -33,13 +33,10 @@
   <!-- HEADER -->
   <header class="gp-entrada-header">
     <a href="index.html" aria-label="Inicio GPADEL">
-      <img
-        src="img/gpadel-logo.svg"
-        alt="GPADEL - Plataforma de gestión de pádel"
-        class="gp-entrada-logo"
-      />
+        <img src="img/gpadel-logo.svg" alt="GPADEL - Plataforma de gestión de pádel" class="gp-entrada-logo" width="180" height="48" decoding="async"/>
     </a>
   </header>
+  
 
   <!-- CONTENIDO -->
   <main class="gp-entrada-wrapper">
