--- a/pages/login.html
+++ b/pages/login.html
@@ -35,7 +35,7 @@
 <header class="gp-header">
     <div class="gp-container gp-header-inner">
       <a href="../index.html" class="gp-logo-link">
-        <img src="../img/gpadel-logo.svg" alt="GPADÉL - Plataforma de gestión de pádel" class="gp-logo-img">
+        <img src="../img/gpadel-logo.svg" alt="GPADEL - Plataforma de gestión de pádel" class="gp-logo-img" width="180" height="48" decoding="async"/>
       </a>
 
       <!-- Navegación desktop -->
