--- a/pages/inscripcion-torneos.html
+++ b/pages/inscripcion-torneos.html
@@ -28,7 +28,7 @@
   <header class="gp-header">
     <div class="gp-container gp-header-inner">
       <a href="../index.html" class="gp-logo-link">
-        <img src="../img/gpadel-logo.svg" alt="GPADÉL - Plataforma de gestión de pádel" class="gp-logo-img">
+        <img src="../img/gpadel-logo.svg" alt="GPADEL - Plataforma de gestión de pádel" class="gp-logo-img" width="180" height="48" decoding="async"/>
       </a>
 
       <!-- Navegación desktop -->
@@ -262,6 +262,7 @@
     </section>
 
   </main>
+
 
 <!-- FOOTER (Bootstrap + agrego accesibilidad con arial-lavel en iconos) -->
   <footer class="gp-footer bg-black text-white pt-5 pb-4" role="contentinfo">
