--- a/pages/jugadores.html
+++ b/pages/jugadores.html
@@ -36,7 +36,7 @@
 <header class="gp-header">
     <div class="gp-container gp-header-inner">
       <a href="../index.html" class="gp-logo-link">
-        <img src="../img/gpadel-logo.svg" alt="GPADÉL - Plataforma de gestión de pádel" class="gp-logo-img">
+        <img src="../img/gpadel-logo.svg" alt="GPADEL - Plataforma de gestión de pádel" width="180" height="48" class="gp-logo-img" decoding="async"/>
       </a>
 
       <!-- Navegación desktop -->
