--- a/index.html
+++ b/index.html
@@ -1,31 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>GPADEL | Gestión de ligas, jugadores y canchas de pádel</title>
-  <meta name="description" content="GPADEL es una plataforma web para gestionar jugadores, ligas, torneos, canchas y marcadores de pádel. Inscripciones, partidos y seguimiento en un solo lugar."/>
+  <meta name="description" content="GPADEL es una plataforma web para la gestión de jugadores, ligas, torneos, canchas y marcadores de pádel.">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  
   <!-- Tipografía -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap"
-    rel="stylesheet"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
 
- <!-- Boostrap -->    
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Libreria -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-  />
+  <!-- Iconos -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <!-- Estilos -->
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="gp-entrada">
@@ -33,52 +27,43 @@
   <!-- HEADER -->
   <header class="gp-entrada-header">
     <a href="index.html" aria-label="Inicio GPADEL">
-        <img src="img/gpadel-logo.svg" alt="GPADEL - Plataforma de gestión de pádel" class="gp-entrada-logo" width="180" height="48" decoding="async"/>
+      <img src="img/gpadel-logo.svg" alt="GPADEL - Plataforma de gestión de pádel" class="gp-entrada-logo" width="180" height="48" fetchpriority="high" decoding="async">
     </a>
   </header>
-  
 
-  <!-- CONTENIDO -->
+  <!-- CONTENIDO PRINCIPAL -->
   <main class="gp-entrada-wrapper">
-
     <h1 class="gp-entrada-title">¿Cómo querés usar GPADEL?</h1>
 
     <div class="gp-entrada-options">
 
-      <!-- JUGADORES -->
-      <a href="pages/jugadores.html" class="gp-entrada-card gp-entrada-card--blue">
+      <a href="pages/jugadores.html" class="gp-entrada-card gp-entrada-card--blue" aria-label="Ingresar a la sección Jugadores">
         <h2>Jugadores</h2>
         <p>Reservá canchas, jugá partidos y llevá el score.</p>
         <span class="gp-entrada-btn">Ingresar</span>
       </a>
 
-      <!-- LIGAS Y CANCHAS -->
-      <a href="pages/canchas-ligas.html" class="gp-entrada-card gp-entrada-card--green">
-        <h2>Ligas & Canchas</h2>
+      <a href="pages/canchas-ligas.html" class="gp-entrada-card gp-entrada-card--green" aria-label="Ingresar a la sección Ligas y Canchas">
+        <h2>Ligas &amp; Canchas</h2>
         <p>Gestioná turnos, ligas, partidos y jugadores.</p>
         <span class="gp-entrada-btn">Ingresar</span>
       </a>
 
     </div>
-
   </main>
 
-<!-- FOOTER (Bootstrap + agrego accesibilidad con arial-lavel en iconos) -->
+  <!-- FOOTER -->
   <footer class="gp-footer bg-black text-white pt-5 pb-4" role="contentinfo">
     <div class="container">
 
-      <!-- BLOQUES PRINCIPALES -->
       <div class="row text-center mb-4">
-
-        <!-- WhatsApp -->
         <div class="col-12 col-md-4 mb-4 mb-md-0">
-          <a href="https://wa.me/5492494521418" target="_blank" rel="noopener" aria-label="Contactar a GPADEL por WhatsApp" class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+          <a href="https://wa.me/5492494521418" target="_blank" rel="noopener noreferrer" aria-label="Contactar a GPADEL por WhatsApp" class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
             <i class="fa-brands fa-whatsapp gp-footer-icon mb-2" aria-hidden="true"></i>
             <span class="gp-footer-text">+54 9 249 4521418</span>
           </a>
         </div>
 
-        <!-- Email -->
         <div class="col-12 col-md-4 mb-4 mb-md-0">
           <a href="mailto:info@gpadel.com.ar" aria-label="Enviar un correo a info@gpadel.com.ar" class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
             <i class="fa-regular fa-envelope gp-footer-icon mb-2" aria-hidden="true"></i>
@@ -86,46 +71,27 @@
           </a>
         </div>
 
-        <!-- Dirección -->
         <div class="col-12 col-md-4">
-          <a href="https://www.google.com/maps?q=Alem+1015,+Tandil" target="_blank" rel="noopener" aria-label="Ver ubicación de GPADEL en Google Maps" class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+          <a href="https://www.google.com/maps?q=Alem+1015,+Tandil" target="_blank" rel="noopener noreferrer" aria-label="Ver ubicación de GPADEL en Google Maps" class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
             <i class="fa-solid fa-map-location-dot gp-footer-icon mb-2" aria-hidden="true"></i>
-            <span class="gp-footer-text text-center">
-              Alem 1015 – Tandil<br>
-              Buenos Aires – Argentina
-            </span>
+            <span class="gp-footer-text text-center">Alem 1015 – Tandil<br>Buenos Aires – Argentina</span>
           </a>
         </div>
-
       </div>
 
-      <!-- REDES SOCIALES -->
       <nav class="d-flex justify-content-center gap-4 mb-3" aria-label="Redes sociales de GPADEL">
-        <a href="https://facebook.com/geneoscoop" target="_blank" rel="noopener" aria-label="Facebook de GPADEL" class="text-white">
-          <i class="fa-brands fa-facebook-f" aria-hidden="true"></i>
-        </a>
-
-        <a href="https://instagram.com/geneos.coop" target="_blank" rel="noopener" aria-label="Instagram de GPADEL" class="text-white">
-          <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-        </a>
-
-        <a href="https://twitter.com/GeneosCoop" target="_blank" rel="noopener" aria-label="Twitter de GPADEL" class="text-white">
-          <i class="fa-brands fa-x-twitter" aria-hidden="true"></i>
-        </a>
-
-        <a href="https://www.linkedin.com/company/geneoscoop/" target="_blank" rel="noopener" aria-label="LinkedIn de GPADEL" class="text-white">
-          <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
-        </a>
+        <a href="https://facebook.com/geneoscoop" target="_blank" rel="noopener noreferrer" aria-label="Facebook de GPADEL" class="text-white"><i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
+        <a href="https://instagram.com/geneos.coop" target="_blank" rel="noopener noreferrer" aria-label="Instagram de GPADEL" class="text-white"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/GeneosCoop" target="_blank" rel="noopener noreferrer" aria-label="Twitter de GPADEL" class="text-white"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/company/geneoscoop/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn de GPADEL" class="text-white"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i></a>
       </nav>
 
-      <!-- COPYRIGHT -->
       <div class="text-center small opacity-75">
         DISEÑADO POR COOPERATIVA GENEOS LTDA.
       </div>
 
     </div>
   </footer>
-
 
 </body>
 </html>
